Fix fullscreen flex container showing scrollbar

--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -1,3 +1,7 @@
+body {
+    margin: 0;
+}
+
 .flex-top-level-container {
     display: flex;
     flex-direction: column;
